--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Senior Webdeveloper Macrodegree  
+  uni: Ais Novations
+  year: June, 2020 &mdash; August, 2020
   # awards:
-  # summary:
+  summary: Increased skills in antivirus, firewall and anti-malware software’s regulation. Refined existing documentation system, resulting in reduced labor costs totaling $10,000 annually via increased workplace effici
